# wb_python_api

./: LICENSE  README.md  example.py  pyproject.toml
src/wb_api/: __init__.py  auth.py  client.py  config.py  constants.py  exceptions.py  rate_limiter.py
src/wb_api/api/: __init__.py  base.py  common.py  content.py  finance.py  marketing.py  prices.py  promotions.py  reports.py  statistics.py  tasks.py
src/wb_api/models/: __init__.py  base.py  content.py  finance.py  marketing.py  prices.py  promotions.py  reports.py  seller_info.py  statistics.py
src/wb_api/utils/: __init__.py  helpers.py  tasks.py
tests/: __init__.py  conftest.py  test_auth.py  test_client.py  test_rate_limiter.py  test_tasks.py
tests/api/: test_common.py  test_content.py  test_finance.py  test_marketing.py  test_prices.py  test_promotions.py  test_reports.py  test_statistics.py
